[@carlosvalarezo] inserts and retrieves messages using jwt
